added kurtosis analysis on all vars

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1326,7 +1326,7 @@
        "[91 rows x 15 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,6 +1589,261 @@
     "#data[\"sex\"].plot(kind = \"hist\")\n",
     "data[\"freq\"].plot(kind = \"hist\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 37.69920875310316\n",
+      "like: 0.13431366803816047\n",
+      "where: -0.0007405417198591557\n",
+      "freq: -1.208486916580869\n",
+      "busy: -0.024276377217553602\n",
+      "educ: -1.9894528675016487\n",
+      "sex: -1.8882820258192652\n",
+      "age: 30.504821550077395\n",
+      "home: -0.5447957839262187\n",
+      "math: -1.4211418880723572\n",
+      "work: 5.527682274683183\n",
+      "own: -0.8501243781094492\n",
+      "cdrom: 0.9446009389671368\n",
+      "email: 0.053362573099414945\n",
+      "grade: -0.5558444805052414\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>like</th>\n",
+       "      <th>where</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>busy</th>\n",
+       "      <th>educ</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>home</th>\n",
+       "      <th>math</th>\n",
+       "      <th>work</th>\n",
+       "      <th>own</th>\n",
+       "      <th>cdrom</th>\n",
+       "      <th>email</th>\n",
+       "      <th>grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.242857</td>\n",
+       "      <td>4.076923</td>\n",
+       "      <td>21.967033</td>\n",
+       "      <td>16.461538</td>\n",
+       "      <td>12.153846</td>\n",
+       "      <td>14.549451</td>\n",
+       "      <td>0.582418</td>\n",
+       "      <td>19.516484</td>\n",
+       "      <td>0.758242</td>\n",
+       "      <td>1.406593</td>\n",
+       "      <td>10.373626</td>\n",
+       "      <td>0.736264</td>\n",
+       "      <td>5.604396</td>\n",
+       "      <td>0.791209</td>\n",
+       "      <td>3.252747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.777040</td>\n",
+       "      <td>10.098659</td>\n",
+       "      <td>38.476097</td>\n",
+       "      <td>33.896020</td>\n",
+       "      <td>32.384126</td>\n",
+       "      <td>34.670918</td>\n",
+       "      <td>0.495893</td>\n",
+       "      <td>1.846093</td>\n",
+       "      <td>0.430521</td>\n",
+       "      <td>10.354793</td>\n",
+       "      <td>19.327958</td>\n",
+       "      <td>0.443099</td>\n",
+       "      <td>22.647482</td>\n",
+       "      <td>0.408697</td>\n",
+       "      <td>0.607242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>14.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            time       like      where       freq       busy       educ  \\\n",
+       "count  91.000000  91.000000  91.000000  91.000000  91.000000  91.000000   \n",
+       "mean    1.242857   4.076923  21.967033  16.461538  12.153846  14.549451   \n",
+       "std     3.777040  10.098659  38.476097  33.896020  32.384126  34.670918   \n",
+       "min     0.000000   1.000000   1.000000   1.000000   0.000000   0.000000   \n",
+       "25%     0.000000   2.000000   3.000000   2.000000   0.000000   0.000000   \n",
+       "50%     0.000000   3.000000   3.000000   3.000000   0.000000   1.000000   \n",
+       "75%     1.250000   3.000000   5.000000   4.000000   1.000000   1.000000   \n",
+       "max    30.000000  99.000000  99.000000  99.000000  99.000000  99.000000   \n",
+       "\n",
+       "             sex        age       home       math       work        own  \\\n",
+       "count  91.000000  91.000000  91.000000  91.000000  91.000000  91.000000   \n",
+       "mean    0.582418  19.516484   0.758242   1.406593  10.373626   0.736264   \n",
+       "std     0.495893   1.846093   0.430521  10.354793  19.327958   0.443099   \n",
+       "min     0.000000  18.000000   0.000000   0.000000   0.000000   0.000000   \n",
+       "25%     0.000000  19.000000   1.000000   0.000000   0.000000   0.000000   \n",
+       "50%     1.000000  19.000000   1.000000   0.000000   5.000000   1.000000   \n",
+       "75%     1.000000  20.000000   1.000000   1.000000  14.500000   1.000000   \n",
+       "max     1.000000  33.000000   1.000000  99.000000  99.000000   1.000000   \n",
+       "\n",
+       "           cdrom      email      grade  \n",
+       "count  91.000000  91.000000  91.000000  \n",
+       "mean    5.604396   0.791209   3.252747  \n",
+       "std    22.647482   0.408697   0.607242  \n",
+       "min     0.000000   0.000000   2.000000  \n",
+       "25%     0.000000   1.000000   3.000000  \n",
+       "50%     0.000000   1.000000   3.000000  \n",
+       "75%     0.000000   1.000000   4.000000  \n",
+       "max    99.000000   1.000000   4.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#data = data_all\n",
+    "#data = data[data[\"like\"] != 99]\n",
+    "\n",
+    "for col in data_all.columns:\n",
+    "    \n",
+    "    #uncomment line below to not clean other cols\n",
+    "    data = data_all\n",
+    "    data = data[data[col] != 99]\n",
+    "    \n",
+    "    print(col + \": \" + str(stats.kurtosis(data[col])))\n",
+    "    \n",
+    "data.describe()"
    ]
   },
   {
