--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1587,7 +1587,9 @@
     "data = data_all\n",
     "#data[\"age\"].plot(kind = \"hist\")\n",
     "#data[\"sex\"].plot(kind = \"hist\")\n",
-    "data[\"freq\"].plot(kind = \"hist\")\n",
+    "#data[\"freq\"].plot(kind = \"hist\")\n",
+    "data[\"time\"].plot(kind = \"hist\")\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -1844,6 +1846,276 @@
     "    print(col + \": \" + str(stats.kurtosis(data[col])))\n",
     "    \n",
     "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>like</th>\n",
+       "      <th>where</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>busy</th>\n",
+       "      <th>educ</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>home</th>\n",
+       "      <th>math</th>\n",
+       "      <th>work</th>\n",
+       "      <th>own</th>\n",
+       "      <th>cdrom</th>\n",
+       "      <th>email</th>\n",
+       "      <th>grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.268182</td>\n",
+       "      <td>4.113636</td>\n",
+       "      <td>22.568182</td>\n",
+       "      <td>15.852273</td>\n",
+       "      <td>12.556818</td>\n",
+       "      <td>15.034091</td>\n",
+       "      <td>0.568182</td>\n",
+       "      <td>19.534091</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>0.318182</td>\n",
+       "      <td>7.352273</td>\n",
+       "      <td>0.738636</td>\n",
+       "      <td>5.784091</td>\n",
+       "      <td>0.784091</td>\n",
+       "      <td>3.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.838299</td>\n",
+       "      <td>10.269284</td>\n",
+       "      <td>38.991834</td>\n",
+       "      <td>33.242591</td>\n",
+       "      <td>32.861905</td>\n",
+       "      <td>35.161188</td>\n",
+       "      <td>0.498168</td>\n",
+       "      <td>1.875118</td>\n",
+       "      <td>0.435494</td>\n",
+       "      <td>0.468440</td>\n",
+       "      <td>10.313522</td>\n",
+       "      <td>0.441896</td>\n",
+       "      <td>23.012964</td>\n",
+       "      <td>0.413809</td>\n",
+       "      <td>0.611198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.750000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.625000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>13.250000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            time       like      where       freq       busy       educ  \\\n",
+       "count  88.000000  88.000000  88.000000  88.000000  88.000000  88.000000   \n",
+       "mean    1.268182   4.113636  22.568182  15.852273  12.556818  15.034091   \n",
+       "std     3.838299  10.269284  38.991834  33.242591  32.861905  35.161188   \n",
+       "min     0.000000   1.000000   1.000000   1.000000   0.000000   0.000000   \n",
+       "25%     0.000000   2.000000   2.750000   2.000000   0.000000   0.000000   \n",
+       "50%     0.000000   3.000000   3.000000   3.000000   0.000000   1.000000   \n",
+       "75%     1.625000   3.000000   5.000000   4.000000   1.000000   1.000000   \n",
+       "max    30.000000  99.000000  99.000000  99.000000  99.000000  99.000000   \n",
+       "\n",
+       "             sex        age       home       math       work        own  \\\n",
+       "count  88.000000  88.000000  88.000000  88.000000  88.000000  88.000000   \n",
+       "mean    0.568182  19.534091   0.750000   0.318182   7.352273   0.738636   \n",
+       "std     0.498168   1.875118   0.435494   0.468440  10.313522   0.441896   \n",
+       "min     0.000000  18.000000   0.000000   0.000000   0.000000   0.000000   \n",
+       "25%     0.000000  19.000000   0.750000   0.000000   0.000000   0.000000   \n",
+       "50%     1.000000  19.000000   1.000000   0.000000   1.000000   1.000000   \n",
+       "75%     1.000000  20.000000   1.000000   1.000000  13.250000   1.000000   \n",
+       "max     1.000000  33.000000   1.000000   1.000000  55.000000   1.000000   \n",
+       "\n",
+       "           cdrom      email      grade  \n",
+       "count  88.000000  88.000000  88.000000  \n",
+       "mean    5.784091   0.784091   3.250000  \n",
+       "std    23.012964   0.413809   0.611198  \n",
+       "min     0.000000   0.000000   2.000000  \n",
+       "25%     0.000000   1.000000   3.000000  \n",
+       "50%     0.000000   1.000000   3.000000  \n",
+       "75%     0.000000   1.000000   4.000000  \n",
+       "max    99.000000   1.000000   4.000000  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#[Scenario 1:] Begin by providing an estimate for the fraction of students who played a\n",
+    "#   video game in the week prior to the survey. Provide an interval estimate as well as a\n",
+    "#   point estimate for this proportion.\n",
+    "\n",
+    "#[Scenario 3:] Consider making an internal estimate for the average amount of time\n",
+    "#   spent playing video games in the week prior to the survey. Keep in mind the overall\n",
+    "#   shape of the sample distribution. A simulation study may help determine the\n",
+    "#   appropriateness of an interval estimate.\n",
+    "data = data_all\n",
+    "data = data[data[\"work\"] < 99]\n",
+    "\n",
+    "p = figure(title = \"Video Games vs Work\")\n",
+    "p.yaxis.axis_label = 'Time worked last week (hours)'\n",
+    "p.xaxis.axis_label = 'Time playing video games last week (hours)'\n",
+    "\n",
+    "p.circle(data[\"time\"], data[\"work\"], size=2)\n",
+    "\n",
+    "output_file(\"Video Games vs Work_All.html\")\n",
+    "show(p)\n",
+    "\n",
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = data_all\n",
+    "\n",
+    "p1 = figure(title=\"Histogram of Time Spent Playing Video Games\")\n",
+    "\n",
+    "hist, edges = np.histogram(data[\"time\"], density=True, bins=50)\n",
+    "\n",
+    "p1.quad(top=hist, bottom=0, left=edges[:-1], right=edges[1:],\n",
+    "        fill_color=\"#036564\", line_color=\"#033649\")\n",
+    "#show(p1)\n",
+    "\n",
+    "p2 = figure(title=\"Histogram of Time Spent Working\")\n",
+    "\n",
+    "hist, edges = np.histogram(data[\"work\"], density=True, bins=50)\n",
+    "\n",
+    "p2.quad(top=hist, bottom=0, left=edges[:-1], right=edges[1:],\n",
+    "        fill_color=\"#036564\", line_color=\"#033649\")\n",
+    "\n",
+    "show(gridplot(p1,p2, ncols=2, plot_width=400, plot_height=400, toolbar_location = None))"
    ]
   },
   {
