--- a/Scen1.ipynb
+++ b/Scen1.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -74,20 +74,22 @@
     {
      "data": {
       "text/plain": [
-       "(0.27220142566756306, 0.47505132158518421)"
+       "(0.28939809634670244, 0.45785465090604482)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "s_form = 1.96 * np.sqrt(s*(1-s)*(314 - 91)/(314 * (91 - 1)))\n",
+    "\n",
     "#front interval calculation\n",
-    "s1 = s - 2 * np.std(data[\"time\"]) / np.sqrt(len(data[\"time\"]))\n",
+    "s1 = s - s_form\n",
     "\n",
     "#end interval calculation\n",
-    "s2 = s + 2 * np.std(data[\"time\"]) / np.sqrt(len(data[\"time\"]))\n",
+    "s2 = s + s_form\n",
     "\n",
     "(s1,s2)"
    ]
