--- a/Scen3.ipynb
+++ b/Scen3.ipynb
@@ -1291,7 +1291,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.24285714286\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.0276561873541816, 1.4580580983601041)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#excluding 0 hours played\n",
+    "data = data_all\n",
+    "data = data[data[\"time\"] < 99]\n",
+    "\n",
+    "s = (data.describe()[\"time\"])[\"mean\"]\n",
+    "print(s)\n",
+    "\n",
+    "s_form = 1.96 * s * np.sqrt((314 - 91)/(314 * 91))\n",
+    "\n",
+    "#front interval calculation\n",
+    "s1 = s - s_form\n",
+    "\n",
+    "#end interval calculation\n",
+    "s2 = s + s_form\n",
+    "\n",
+    "(s1,s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.32647058824\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2.7504915602714854, 3.9024496161991022)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#including 0 hours played\n",
+    "data = data_all\n",
+    "data = data[data[\"time\"] < 99]\n",
+    "data = data[data[\"time\"] > 0]\n",
+    "\n",
+    "s = (data.describe()[\"time\"])[\"mean\"]\n",
+    "print(s)\n",
+    "\n",
+    "s_form = 1.96 * s * np.sqrt((314 - 91)/(314 * 91))\n",
+    "\n",
+    "#front interval calculation\n",
+    "s1 = s - s_form\n",
+    "\n",
+    "#end interval calculation\n",
+    "s2 = s + s_form\n",
+    "\n",
+    "(s1,s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p = figure(title=\"Time Spent Playing Video Games\", tools=\"save\")\n",
+    "\n",
+    "hist, edges = np.histogram(data[\"time\"], density=True, bins=50)\n",
+    "\n",
+    "p.quad(top=hist, bottom=0, left=edges[:-1], right=edges[1:],\n",
+    "        fill_color=\"#036564\", line_color=\"#033649\")\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.0, 0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 3.0, 0.5, 2.0, 0.0, 0.0, 5.0, 0.0, 1.0, 0.0, 3.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 3.0, 0.0, 30.0, 0.0, 1.5, 0.0, 0.0, 0.0, 2.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 2.0, 2.0, 0.0, 0.0, 0.5, 0.0, 2.0, 0.10000000000000001, 14.0, 1.0, 4.0, 2.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 14.0, 0.0, 0.0, 2.0, 0.5, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 3.0, 0.0, 0.0, 14.0, 0.5, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 30.0, 0.0, 0.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 1.0, 4.0, 0.0, 0.0, 2.0, 2.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.5, 3.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.10000000000000001, 5.0, 0.0, 0.0, 0.0, 1.5, 2.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 14.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 3.0, 0.0, 0.0, 2.0, 2.0, 14.0, 0.0, 0.0, 0.5, 1.0, 0.0, 2.0, 0.0, 14.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 1.0, 2.0, 0.5, 0.0, 0.0, 0.0, 1.0, 4.0, 1.5, 0.5, 30.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.0, 2.0, 0.0, 0.0, 1.0, 0.0, 2.0, 0.0, 3.0, 0.10000000000000001, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 3.0, 0.5, 5.0, 2.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 1.0, 2.0, 0.0, 4.0, 14.0, 0.0, 0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.10000000000000001, 0.0, 0.0, 0.0, 0.0, 0.5, 1.0, 0.0, 30.0, 1.0, 0.0, 2.0, 5.0, 2.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.5, 0.0, 2.0, 2.0, 0.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.5, 2.0, 0.5, 3.0, 0.0, 2.0, 0.0, 2.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 14.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 2.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "time = data[\"time\"]\n",
+    "time \n",
+    "print()\n",
+    "\n",
+    "for i in range(1):\n",
+    "    boot = []\n",
+    "    while len(boot) < 341:\n",
+    "        for el in data[\"time\"].sample(n = 91).tolist():\n",
+    "            boot.append(el)\n",
+    "    print(boot)\n",
+    "\n",
+    "print(boot.count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1299,22 +1435,38 @@
     {
      "data": {
       "text/plain": [
-       "3.3264705882352938"
+       "pandas.core.series.Series"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = data_all\n",
-    "data = data[data[\"time\"] < 99]\n",
-    "data = data[data[\"time\"] > 0]\n",
-    "\n",
-    "s = (data.describe()[\"time\"])[\"mean\"]\n",
-    "s"
+    "type(data[\"time\"].sample(n = 4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  2. ,   0. ,   0.5,   3. ,   1. ,   0.1,   4. ,  30. ,  14. ,\n",
+       "         1.5,   5. ])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1323,15 +1475,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#front interval calculation\n",
-    "s1 = s - 2 * np.std(data[\"time\"]) / np.sqrt(len(data[\"time\"]))\n",
-    "\n",
-    "#end interval calculation\n",
-    "s2 = s + 2 * np.std(data[\"time\"]) / np.sqrt(len(data[\"time\"]))\n",
-    "\n",
-    "(s1,s2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
