--- a/Scen3.ipynb
+++ b/Scen3.ipynb
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -1309,51 +1309,7 @@
        "(1.0276561873541816, 1.4580580983601041)"
       ]
      },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#excluding 0 hours played\n",
-    "data = data_all\n",
-    "data = data[data[\"time\"] < 99]\n",
-    "\n",
-    "s = (data.describe()[\"time\"])[\"mean\"]\n",
-    "print(s)\n",
-    "\n",
-    "s_form = 1.96 * s * np.sqrt((314 - 91)/(314 * 91))\n",
-    "\n",
-    "#front interval calculation\n",
-    "s1 = s - s_form\n",
-    "\n",
-    "#end interval calculation\n",
-    "s2 = s + s_form\n",
-    "\n",
-    "(s1,s2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.32647058824\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2.7504915602714854, 3.9024496161991022)"
-      ]
-     },
-     "execution_count": 43,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1318,6 @@
     "#including 0 hours played\n",
     "data = data_all\n",
     "data = data[data[\"time\"] < 99]\n",
-    "data = data[data[\"time\"] > 0]\n",
     "\n",
     "s = (data.describe()[\"time\"])[\"mean\"]\n",
     "print(s)\n",
@@ -1380,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -1397,37 +1352,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.0, 0.0, 0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 3.0, 0.5, 2.0, 0.0, 0.0, 5.0, 0.0, 1.0, 0.0, 3.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 3.0, 0.0, 30.0, 0.0, 1.5, 0.0, 0.0, 0.0, 2.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 2.0, 2.0, 0.0, 0.0, 0.5, 0.0, 2.0, 0.10000000000000001, 14.0, 1.0, 4.0, 2.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.0, 14.0, 0.0, 0.0, 2.0, 0.5, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 3.0, 0.0, 0.0, 14.0, 0.5, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 30.0, 0.0, 0.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 1.0, 4.0, 0.0, 0.0, 2.0, 2.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.5, 3.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.10000000000000001, 5.0, 0.0, 0.0, 0.0, 1.5, 2.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 14.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 3.0, 0.0, 0.0, 2.0, 2.0, 14.0, 0.0, 0.0, 0.5, 1.0, 0.0, 2.0, 0.0, 14.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 1.0, 2.0, 0.5, 0.0, 0.0, 0.0, 1.0, 4.0, 1.5, 0.5, 30.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 0.0, 2.0, 0.0, 0.0, 1.0, 0.0, 2.0, 0.0, 3.0, 0.10000000000000001, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 3.0, 0.5, 5.0, 2.0, 0.0, 2.0, 0.0, 0.0, 2.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.0, 1.0, 2.0, 0.0, 4.0, 14.0, 0.0, 0.0, 0.5, 0.0, 0.0, 0.0, 0.0, 0.10000000000000001, 0.0, 0.0, 0.0, 0.0, 0.5, 1.0, 0.0, 30.0, 1.0, 0.0, 2.0, 5.0, 2.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.5, 0.0, 2.0, 2.0, 0.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.5, 2.0, 0.5, 3.0, 0.0, 2.0, 0.0, 2.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 14.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, 0.5, 0.0, 0.0, 0.0, 2.0, 2.0, 0.0]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "time = data[\"time\"]\n",
-    "time \n",
-    "print()\n",
-    "\n",
-    "for i in range(1):\n",
+    "means = []\n",
+    "for i in range(2000):\n",
     "    boot = []\n",
     "    while len(boot) < 341:\n",
-    "        for el in data[\"time\"].sample(n = 91).tolist():\n",
+    "        for el in data[\"time\"].sample(n = 4).tolist():\n",
     "            boot.append(el)\n",
-    "    print(boot)\n",
-    "\n",
-    "print(boot.count)"
+    "    means.append(sum(boot)/len(boot))\n",
+    "len(means)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p = figure(title=\"Histogram of Bootstrap Means\", tools=\"save\")\n",
+    "\n",
+    "hist, edges = np.histogram(means, density=True, bins=50)\n",
+    "\n",
+    "p.quad(top=hist, bottom=0, left=edges[:-1], right=edges[1:],\n",
+    "        fill_color=\"#036564\", line_color=\"#033649\")\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -1435,38 +1406,29 @@
     {
      "data": {
       "text/plain": [
-       "pandas.core.series.Series"
+       "-0.08683806033665897"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(data[\"time\"].sample(n = 4))"
+    "stats.kurtosis(means)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  2. ,   0. ,   0.5,   3. ,   1. ,   0.1,   4. ,  30. ,  14. ,\n",
-       "         1.5,   5. ])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "pqq = stats.probplot(means, plot = plt)\n",
+    "plt.show(pqq)"
+   ]
   },
   {
    "cell_type": "code",
